#s wa Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#1022] Fix a false positive condition in ipmi-cipher-zero caused by
  not checking the error code in responses. Implementations which return an
  error are not vulnerable. [Juho Jokelainen]

o [GH#978] Fixed Nsock on Windows giving errors when selecting on STDIN. This
  was causing Ncat 7.60 in connect mode to quit with error:
   libnsock select_loop(): nsock_loop error 10038: An operation was attempted on something that is not a socket.
  [nnposter]

o [NSE][GH#958] Two new libraries for NSE.
  - punycode
  - idna
  [Rewanth Cool]

o [NSE] New fingerprints for http-enum:
  - [GH#954] Telerik UI CVE-2017-9248 [Harrison Neal]
  - [GH#767] Many WordPress version detections [Rewanth Cool]

o [NSE] http-trane-info obtains information from Trane Tracer SC controllers
  and connected HVAC devices. [Pedro Joaquin]

o [GH#981][GH#984][GH#996][GH#975] Fixed Ncat proxy authentication issues:
  - Usernames and/or passwords could not be empty
  - Passwords could not contain colons
  - SOCKS5 authentication was not properly documented
  - SOCKS5 authentication had a memory leak
  [nnposter]

o [GH#1009][GH#1013] Fixes to autoconf header files to allow autoreconf to be
  run. [Lukas Schwaighofer]

o [NSE] deluge-rpc-brute performs brute-force credential testing against Deluge
  BitTorrent RPC services, using the new zlib library. [Claudiu Perta]

o [GH#977] Improved DNS service version detection coverage and consistency
  by using data from a Project Sonar Internet wide survey. Numerouse false
  positives were removed and reliable softmatches added. Match lines for
  version.bind responses were also conslidated using the technique below.
  [Tom Sellers]

o [GH#977] Changed version probe fallbacks so as to work cross protocol
  (TCP/UDP). This enables consolidating match lines for services where the
  responses on TCP and UDP are similar. [Tom Sellers]

o [NSE][GH#532] Added zlib library for NSE. This was a leftover project from